# mix-memtrace

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  traces.0  traces.1
demo-src/: Makefile.am  Makefile.in  memdebug_demo.cpp
include/mem_trace/: mem-debug.h  mem-record.h
lib/: Makefile.am  Makefile.in
lib/mem_trace/: MemInfoContainer.cpp  MemInfoContainer.h  mem-record.cpp
